--- a/blocks-portfolio/footer/footer.css
+++ b/blocks-portfolio/footer/footer.css
@@ -2,7 +2,14 @@
     min-height: 95px;
     display: flex;
     justify-content: center;
-    max-width: 1330px;
-    min-width: 1280px;
+    width: 100%;
+    min-width: 320px;
     margin: 0 auto;
+}
+
+@media (max-width: 425px) {
+    .footer {
+        min-height: 40px;
+        margin-bottom: 20px;
+    }
 }
