--- a/blocks-portfolio/header/__subtitle/header__subtitle.css
+++ b/blocks-portfolio/header/__subtitle/header__subtitle.css
@@ -1,12 +1,21 @@
 .header__subtitle {
-  font-size: 28px;
+  font-size: 32px;
+  font-weight: normal;
   text-decoration: none;
   color: #10191E;
+  margin-block-start: 0;
+  margin-block-end: 0;
   margin: auto auto;
   padding: 0;
 }
 
-.header__subtitle[lang="ru"]::before {
+@media (max-width: 1440px) {
+  .header__subtitle {
+    font-size: 28px;
+  }
+}
+
+/*.header__subtitle[lang="ru"]::before {
   content: 'Привет, меня зовут ';
 }
   
@@ -20,4 +29,4 @@
 
 .header__subtitle::after {
   content: "!";
-}
+}*/
