--- a/blocks-portfolio/header/__title/header__title.css
+++ b/blocks-portfolio/header/__title/header__title.css
@@ -1,8 +1,22 @@
 .header__title {
-  font-size: 36px;
+  font-size: 42px;
   font-weight: 900;
   text-decoration: none;
   color: #10191E;
+  margin-block-start: 0;
+  margin-block-end: 0;
   margin: auto auto;
   padding: 0;
+}
+
+@media (max-width: 1440px) {
+  .header__title {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 1080px) {
+  .header__title {
+    font-size: 32px;
+  }
 }
