--- a/blocks-portfolio/header/header.css
+++ b/blocks-portfolio/header/header.css
@@ -1,6 +1,5 @@
 .header {
-  min-height: 150px;
-  max-width: 1330px;
-  min-width: 1280px;
-  margin: 0 auto;
+  min-height: 100px;
+  width: 320px;
+  margin: 30px auto 0;
 }
