--- a/blocks-portfolio/menu/menu.css
+++ b/blocks-portfolio/menu/menu.css
@@ -1,11 +1,22 @@
 .menu {
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     min-height: 75px;
     align-items: center;
     flex-wrap: wrap;
-    max-width: 1330px;
-    min-width: 1280px;
-    margin: 40px auto;
+    max-width: 1280px;
+    min-width: 320px;
+    margin: 20px auto 40px;
+    font-size: 18px;
+    line-height: 24px;
+    vertical-align: top;
+}
+
+@media (min-width: 768px) {
+    .menu {
+    flex-direction: row;
+    margin-bottom: 20px;
+    }
 }
