--- a/blocks-four-rules/content/content.css
+++ b/blocks-four-rules/content/content.css
@@ -1,5 +1,16 @@
 .content {
-    font-size: 0;
-    width: 790px;
+    width: 100vw;    
+    max-width: 790px;
     margin: 100px auto 50px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+@media (max-width: 600px) {
+    .content {
+        flex-direction: column;
+        justify-content: start;
+    }
 }
