--- a/blocks-four-rules/header/header.css
+++ b/blocks-four-rules/header/header.css
@@ -1,5 +1,6 @@
 .header {
     height: 100vh;
+    max-height: 1100px;
     background-color: #eee;
     background-image: url(https://pictures.s3.yandex.net/frontend-developer/free-course/cover.jpg);
     background-size: cover;
