--- a/blocks-four-rules/page/page.css
+++ b/blocks-four-rules/page/page.css
@@ -6,7 +6,7 @@ body {
     box-sizing: border-box;
 }
 
-body, h1, h2, h3, h4, p, a {
+body, h1, h2, h3, h4, p {
     margin: 0;
     font-size: 100%;
     font-weight: normal;
