--- a/blocks-portfolio/project/__overlay/project__overlay.css
+++ b/blocks-portfolio/project/__overlay/project__overlay.css
@@ -18,3 +18,9 @@
 .project__overlay:hover {
     opacity: 1;
 }
+
+@media (min-width: 426px) and (max-width: 768px) {
+    .project__overlay {
+        font-size: 24px;
+    }
+}
