добавлена страница "прокрастинация"

--- a/pages/russian-travel.css
+++ b/pages/russian-travel.css
@@ -1,5 +1,5 @@
 @import url(../vendor/normalize.css);
-@import url(../vendor/fonts/fonts.css);
+@import url(../vendor/fonts/fonts_project_russian-travel.css);
 
 @import url(../blocks-russian-travel/page/page.css);
 @import url(../blocks-russian-travel/header/header.css);
