--- a/blocks-portfolio/project/__video/project__video.css
+++ b/blocks-portfolio/project/__video/project__video.css
@@ -1,5 +1,9 @@
 .project__video {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
+    z-index: -1;
 }
