--- a/blocks-procrastinate/header/__button/header__button.css
+++ b/blocks-procrastinate/header/__button/header__button.css
@@ -13,3 +13,9 @@
 .header__button:hover {
     opacity: 0.5;
 }
+
+@media (max-width: 560px) {
+    .header__button {
+      width: 110px;
+    }
+}
