--- a/blocks-procrastinate/main-image/main-image.css
+++ b/blocks-procrastinate/main-image/main-image.css
@@ -3,3 +3,15 @@
     display: block;
     margin: 60px auto 50px;
 }
+
+@media (max-width: 560px) {
+    .main-image {
+      margin: 90px auto 50px;
+    }
+}
+
+@media (min-height: 800px) {
+    .main-image {
+      margin: 0 auto 50px;
+    }
+}
