--- a/blocks-procrastinate/page/page.css
+++ b/blocks-procrastinate/page/page.css
@@ -1,4 +1,5 @@
-body {
+.page {
+    -webkit-font-smoothing: antialiased;
     background-color: #323131;
     color: white;
     position: relative;
@@ -8,4 +9,18 @@ body {
     font-family: 'Suisse';
     box-sizing: border-box;
     padding: 36px;
+}
+
+@media (max-width: 560px) {
+    .page {
+        padding: 24px;
+    }
+}
+
+@media (min-height: 880px) {
+    .page {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
