--- a/blocks-portfolio/content/__text/content__text.css
+++ b/blocks-portfolio/content/__text/content__text.css
@@ -7,6 +7,7 @@
   margin: 0 auto;
   box-sizing: border-box;
   padding: 16px;
+  text-align: justify;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
