--- a/blocks-portfolio/header/__title/header__title.css
+++ b/blocks-portfolio/header/__title/header__title.css
@@ -6,7 +6,7 @@
   margin-block-start: 0;
   margin-block-end: 0;
   margin: auto auto;
-  padding: 0;
+  padding: 0 0 15px;
 }
 
 @media (max-width: 1440px) {
